# Fire

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  ART_LICENSE.md  Blood.jucer  CMakeLists.txt  CNAME  Fire.jucer  README.md  TODO.md  VERSION  cn.html  index.html  styles.html
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_and_test.yml  cmake.yml  cmake_ctest.yml  codeql-analysis.yml  fire.yml
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST.plist  Info-VST3.plist
Builds/VisualStudio2019/: Blood.sln  Blood_SharedCode.vcxproj  Blood_SharedCode.vcxproj.filters  Blood_StandalonePlugin.vcxproj  Blood_StandalonePlugin.vcxproj.filters  Blood_VST.vcxproj  Blood_VST.vcxproj.filters  Blood_VST3.vcxproj  Blood_VST3.vcxproj.filters  Fire.sln  Fire_SharedCode.vcxproj  Fire_SharedCode.vcxproj.filters  Fire_VST3.vcxproj  Fire_VST3.vcxproj.filters  resources.rc
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h  JuceLV2Defines.h  JucePluginDefines.h  include_ff_meters_LevelMeter.cpp  include_juce_audio_plugin_client_AAX.cpp  include_juce_audio_plugin_client_AAX.mm  include_juce_audio_plugin_client_AAX_utils.cpp  include_juce_audio_plugin_client_ARA.cpp  include_juce_audio_plugin_client_AU_1.mm  include_juce_audio_plugin_client_AU_2.mm  include_juce_audio_plugin_client_AUv3.mm  include_juce_audio_plugin_client_LV2.cpp  include_juce_audio_plugin_client_LV2.mm  include_juce_audio_plugin_client_Standalone.cpp  include_juce_audio_plugin_client_Unity.cpp  include_juce_audio_plugin_client_VST2.cpp  include_juce_audio_plugin_client_VST2.mm  include_juce_audio_plugin_client_VST3.cpp  include_juce_audio_plugin_client_VST3.mm  include_juce_audio_plugin_client_VST_utils.mm  include_juce_audio_plugin_client_utils.cpp  include_juce_audio_processors_ara.cpp  include_juce_audio_processors_lv2_libs.cpp
Source/: CloseButton.cpp  CloseButton.h  Delay.h  DiodeWDF.h  Distortion.cpp  Distortion.h  FreqTextLabel.cpp  FreqTextLabel.h  LookAndFeel.h  Oscilloscope.cpp  Oscilloscope.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Preset.cpp  Preset.h  SpectrumAnalyserTutorial_02.h  VerticalLine.cpp  VerticalLine.h  WDF.h
Source/DSP/: ClippingFunctions.h  DiodeWDF.h  Distortion.cpp  DistortionLogic.h  LfoData.h  LfoEngine.cpp  LfoEngine.h  LfoManager.cpp  LfoManager.h  LfoShapeGenerator.h  ModulationRouting.h  WDF.h  WidthProcessor.cpp  WidthProcessor.h
Source/GUI/: InterfaceDefines.h  LookAndFeel.h  ModulatableSlider.cpp  ModulatableSlider.h  SettingsComponent.h
Source/Graph Components/: DistortionGraph.cpp  DistortionGraph.h  GraphPanel.cpp  GraphPanel.h  Oscilloscope.cpp  Oscilloscope.h  SpectrumComponent.cpp  SpectrumComponent.h  VUMeter.cpp  VUMeter.h  VUPanel.cpp  VUPanel.h  WidthGraph.cpp  WidthGraph.h
Source/Multiband/: CloseButton.cpp  CloseButton.h  EnableButton.cpp  EnableButton.h  FFTProcessor.h  FilterControl.cpp  FilterControl.h  FreqDividerGroup.cpp  FreqDividerGroup.h  FreqTextLabel.cpp  FreqTextLabel.h  Multiband.cpp  Multiband.h  SoloButton.cpp  SoloButton.h  SpectrumComponent.cpp  SpectrumComponent.h  VerticalLine.cpp  VerticalLine.h
Source/Utility/: AudioHelpers.h  FiltersUtil.h  Parameters.h  VersionInfo.cpp  VersionInfo.h
Temp/: GenerateGoldenMasters.cpp  README.md
Tests/: Benchmarks.cpp  PluginBasics.cpp
Tests/helpers/: test_helpers.h
assets/images/: firewingslogo.psd
benchmarks/: Benchmarks.cpp  Catch2Main.cpp
cmake/: Assets.cmake  Benchmarks.cmake  CHANGELOG.md  GitHubENV.cmake  JUCEDefaults.cmake  PamplejuceIPP.cmake  PamplejuceMacOS.cmake  PamplejuceVersion.cmake  README.md  SharedCodeDefaults.cmake  Tests.cmake  XcodePrettify.cmake
css/: styles.css  vendor.css
js/: main.js  plugins.js
modules/melatonin_inspector/: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  copy_cmake_assets.rb  melatonin_inspector.cpp  melatonin_inspector.h  update_juce_colours.rb
modules/melatonin_inspector/.github/workflows/: ci.yml
modules/melatonin_inspector/LatestCompiledAssets/: BinaryData1.cpp  BinaryData10.cpp  BinaryData11.cpp  BinaryData12.cpp  BinaryData13.cpp  BinaryData14.cpp  BinaryData15.cpp  BinaryData16.cpp  BinaryData17.cpp  BinaryData18.cpp  BinaryData19.cpp  BinaryData2.cpp  BinaryData20.cpp  BinaryData3.cpp  BinaryData4.cpp  BinaryData5.cpp  BinaryData6.cpp  BinaryData7.cpp  BinaryData8.cpp  BinaryData9.cpp  InspectorBinaryData.h
modules/melatonin_inspector/melatonin/: component_model.h  inspector_component.h  lookandfeel.h
modules/melatonin_inspector/melatonin/components/: accesibility.h  box_model.h  collapsable_panel.h  color_picker.h  colour_property_component.h  component_tree_view_item.h  fps_meter.h  inspector_image_button.h  overlay.h  preview.h  properties.h  tree_component.h
modules/melatonin_inspector/melatonin/helpers/: colors.h  colour_ids.h  component_helpers.h  inspector_settings.h  misc.h  overlay_mouse_listener.h  timing.h
modules/melatonin_inspector/tests/: member_disabled.cpp  member_enabled.cpp  unique_ptr_disabled.cpp  unique_ptr_enabled.cpp
packaging/: EULA  dmg.json  installer.iss  pamplejuce.icns
pagecss/: index.css
pagejs/: index.js
resource/: blood.psd  blood_background.psd  blood_background2.psd  blood_background_old.psd  firelogo.psd
test/: CatchMain.cpp  PluginTest.cpp
tests/: Catch2Main.cpp  MyTests.cpp  RegressionTests.cpp
tests/Presets/: 2bands_hq.fire  2bands_hq_mixtype1.fire  2bands_hq_mixtype2.fire  2bands_mixtype1.fire  2bands_mixtype3.fire  2bands_mixtype4.fire  2bands_nosafe.fire  3bands_nosafe.fire  4bands_nosafe.fire  bias0.18.fire  bias0.18rec0.5.fire  bug preset.fire  half_drive_no_safe.fire  half_drive_no_safe_comp.fire  half_drive_no_safe_extreme.fire  half_drive_no_safe_global_filter.fire  half_drive_no_safe_hq.fire  half_drive_no_safe_width.fire  half_drive_safe.fire  init.fire  init_mix0.fire  init_no_safe.fire  init_no_safe_hq.fire  init_not_enable.fire  lfo_all1.fire  lfo_drive_bi.fire  lfo_drive_uni.fire  lfo_lfo1_to_rec1.fire  lfo_sawup.fire  (+9 more)
(+100 files in other folders)
